                                      Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
  - 25-03-2005 fixed: tbn thumbnails on iso9660 discs
  - 23-03-2005 updated: Korean language file (Thnx to akoako)
  - 23-03-2004 updated: Polish language file (Thnx to napek)
  - 23-03-2005 fixed: ".." item was always hidden in DVD folders.
  - 22-03-2005 fixed: [ 1095213 ] Error handleing of xboxmediacenter.xml.
  - 22-03-2005 added: VideoPlayer.Cover infoimage to the infomanager.
  - 22-03-2005 fixed: Harddisk spin up when fast fowarding (or display of any control in full screen video).
  - 22-03-2005 fixed: The settings table in the video database needs clearing out for audio stream problems.
  - 21-03-2005 changed: dvd thumbs are no longer considered remote so they are cached regardless of the FindRemoteThumbs setting 
  - 21-03-2005 fixed: correct album thumbs are displayed when multiple albums are in the same directory (be sure to enable ID3 tag reading before scanning)
  - 21-03-2005 changed: network.ipaddress infolabel prefixes "IP: " to the ip address.
  - 21-03-2005 fixed: Audio stream settings caused problems on saving video info if the audio stream was  stereo.  Plus, the stereo/left/right setting was not saved on a per-video basis.  Caused no audio on playback after the Audio options from the OSD had been accessed last time the video was played.
  - 21-03-2005 added: Options in settings.xml to adjust the max A/V and subs delays.
  - 21-03-2005 changed: Autorun priority runs: DVD->(S)VCD->PICTURE disc->Video->Music->Pictures.
  - 21-03-2005 fixed: [ 1165273 ] Resume Play doesn't work on stacked items.
  - 21-03-2005 fixed: Only the first item in a stacked video appeared in the database views.